k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-app-ingress
  namespace: library-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: library-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: library-app-service
            port:
              number: 8081
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: library-app-service
            port:
              number: 8081
      - path: /swagger-ui
        pathType: Prefix
        backend:
          service:
            name: library-app-service
            port:
              number: 8081
      - path: /v3/api-docs
        pathType: Prefix
        backend:
          service:
            name: library-app-service
            port:
              number: 8081
